--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="kkvxCvQohYw47huxyWKlKrq8IG0t3cDLAmlhLyGCUa0" />
+  <link rel="canonical" href="https://server-side-games.netlify.app/">
 
 <title>Client-Side vs Server-Side Games: Why Mods Have Limits</title>
 
@@ -317,3 +319,4 @@ game mod limitations and modern software security.
 
 </body>
 </html>
+
